--- a/style.css
+++ b/style.css
@@ -8,11 +8,22 @@
 
 .square {
     margin: 1px;
-    background-color: lightcyan;
 }
 
 #btn1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100px;
+    height: 50px;
+    padding: 10px;
+    margin: 20px;
+}
+
+body {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
