--- a/style.css
+++ b/style.css
@@ -16,10 +16,15 @@
     margin: 20px;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    max-width: 100%;
+    overflow-x: hidden;
 }
