--- a/style.css
+++ b/style.css
@@ -4,21 +4,18 @@
     justify-content: flex-start;
 }
 
-
-
 #btn1 {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100px;
     height: 50px;
-    padding: 10px;
-    margin: 20px;
 }
 
 html, body {
     height: 100%;
     overflow: hidden;
+    font-family: fantasy;
 }
 
 body {
@@ -26,6 +23,7 @@ body {
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    max-width: 100%;
-    
+    max-width: 100%;  
+    gap: 10px;
+    background-color: blanchedalmond;
 }
