--- a/style.css
+++ b/style.css
@@ -15,15 +15,28 @@
 html, body {
     height: 100%;
     overflow: hidden;
-    font-family: fantasy;
+    font-family: "ＭＳ Ｐゴシック";
 }
 
 body {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     max-width: 100%;  
     gap: 10px;
     background-color: blanchedalmond;
+}
+
+#Main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    
+}
+
+#Main > div {
+    max-width: 400px;   
+    background-color: lightblue;
 }
