--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
-#container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-}
+
 
 html, body {
     height: 100%;
     overflow: hidden;
-    font-family: "ＭＳ Ｐゴシック";
+    font-family: "Abel";
     font-size: x-large;
 }
 
@@ -30,17 +26,26 @@ body {
     gap: 20px;
 }
 
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    border: 10px solid rgb(255, 225, 239);
+    border-radius: 20px;
+}
+
 #Main > #RightBox
 {
     display: flex;
     flex-direction: column;
-    max-width: 400px;   
+    max-width: 500px;   
     background-color: lightblue;
     border: 3px solid rgb(255, 225, 239);
     padding: 20px;
     text-align: center;
     gap: 10px;
     justify-content: space-evenly;
+    border-radius: 15px 50px;
 }
 
 
@@ -63,9 +68,13 @@ body {
 
 #Main > #RightBox > .GenericBox {
     display: flex;
+    background-color: bisque;
     flex-direction: column;
     margin:10px;
     gap:10px;
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 15px 50px;
 }
 
 #Main > #RightBox > #Guide {
@@ -74,4 +83,10 @@ body {
     margin: 5px;
     flex-direction: column;
     gap:20px;
+}
+
+.footer {
+    font-size: 30px;
+    background-color: white;
+    
 }
