--- a/style.css
+++ b/style.css
@@ -85,8 +85,13 @@ body {
     gap:20px;
 }
 
-.footer {
-    font-size: 30px;
-    background-color: white;
-    
+.square {
+    transition: transform 0.1s ease;
 }
+
+.pop-effect {
+    transform: scale(1.3);  
+    transition: transform 0.1s ease; 
+}
+
+
