--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 html, body {
     height: 100%;
     overflow: hidden;
-    font-family: "Abel";
+    font-family: "Pixelify Sans";
     font-size: x-large;
 }
 
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     max-width: 100%;  
     gap: 10px;
     background-image: url("Images/wp1933972.webp");
@@ -30,8 +30,9 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    border: 10px solid rgb(255, 225, 239);
+    border: 10px solid lightgray;
     border-radius: 20px;
+    box-shadow: 0px 2px 30px black
 }
 
 #Main > #RightBox
@@ -40,12 +41,13 @@ body {
     flex-direction: column;
     max-width: 500px;   
     background-color: lightblue;
-    border: 3px solid rgb(255, 225, 239);
+    border: 3px solid lightgray;
     padding: 20px;
     text-align: center;
     gap: 10px;
     justify-content: space-evenly;
     border-radius: 15px 50px;
+    box-shadow: 0px 2px 30px black;
 }
 
 
@@ -75,6 +77,7 @@ body {
     padding: 10px;
     border: 2px solid white;
     border-radius: 15px 50px;
+    box-shadow: 0px 5px 10px black;
 }
 
 #Main > #RightBox > #Guide {
